# Bayes-bandit

./: .gitignore  README.md  bayes-bandit.js  index.html  main.py  math.md  old_index.html  parameter_study.csv  pyproject.toml
conf/: config.yaml
src/: __init__.py  parameter_study.py  pizza_bandit.py
tests/: test_parameter_study.py  test_pizza_bandit.py
